add correct locking functionality, test pumpfun as well (#10)
